// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`правильно формирует контент для общего блока 1`] = `
<div
  className="ExclusiveOfferPopupMobile"
>
  <p
    className="ExclusiveOfferPopupMobile__text"
  >
    Объявления, для которых продавцы указали, что они размещаются только на Авто.ру. 
  </p>
  <Link
    className="ExclusiveOfferPopupMobile__link"
    metrika="exclusive,tap_more"
    target="_blank"
    url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
  >
    Подробнее
  </Link>
</div>
`;

exports[`правильно формирует контент попапа для владельца 1`] = `
<div
  className="ExclusiveOfferPopupMobile"
>
  <p
    className="ExclusiveOfferPopupMobile__text"
  >
    Вы указали, что объявление размещается только на Авто.ру. 
  </p>
  <Link
    className="ExclusiveOfferPopupMobile__link"
    metrikaParams="Exclusive_settings,tap_more"
    target="_blank"
    url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
  >
    Подробнее
  </Link>
</div>
`;

exports[`правильно формирует контент попапа для не владельца 1`] = `
<div
  className="ExclusiveOfferPopupMobile"
>
  <p
    className="ExclusiveOfferPopupMobile__text"
  >
    Не пропустите — продавец указал, что объявление размещается только на Авто.ру. 
  </p>
  <Link
    className="ExclusiveOfferPopupMobile__link"
    metrika="exclusive,tap_more"
    target="_blank"
    url="https://yandex.ru/legal/autoru_terms_of_service/?lang=ru#1_1_17"
  >
    Подробнее
  </Link>
</div>
`;
